fixes style problems